Update strategy selection logic in builder
- Rename SimulationBuilder to TuiSimulationBuilder